--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "clean": "turbo run clean",
     "dev": "turbo run dev",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint",
     "test": "turbo run test"
   },
-  "dependencies": {},
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "^2.4.4"
+    "@biomejs/biome": "1.9.4",
+    "tsx": "^4.19.3",
+    "turbo": "^2.4.4",
+    "vitest": "^3.0.8"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=7.0.0"
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
   },
-  "packageManager": "pnpm@10.6.2"
+  "packageManager": "pnpm@10.6.3"
 }
