--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,38 +5,31 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
-    "lint": "tsc --noEmit && eslint \"src/**/*.ts*\" --max-warnings 0",
-    "start": "node -r esbuild-register ./src/index.ts",
-    "test": "jest --detectOpenHandles"
-  },
-  "jest": {
-    "preset": "@repo/jest-presets/node"
+    "dev": "npx tsx watch ./src/index.ts",
+    "start": "npx tsx ./src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@repo/logger": "workspace:*",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
+    "consola": "^3.4.0",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.21.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/jest-presets": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.24",
+    "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
-    "esbuild": "^0.20.1",
-    "esbuild-register": "^3.5.0",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "supertest": "^6.3.3",
-    "typescript": "5.5.4"
+    "@vitest/coverage-v8": "3.0.8",
+    "@vitest/ui": "3.0.8",
+    "supertest": "^7.0.0",
+    "typescript": "5.8.2"
   }
 }
