--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,18 +4,14 @@
   "exports": {
     "./button": "./src/button.tsx"
   },
-  "scripts": {
-    "lint": "eslint \"**/*.ts*\" --max-warnings 0"
-  },
+  "scripts": {},
   "devDependencies": {
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
-    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "typescript": "5.5.4"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "typescript": "5.8.2"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^19.0.0"
   }
 }
