--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
 		"build": "tsc",
 		"clean": "rm -rf dist",
 		"dev": "npx tsx watch ./src/index.ts",
-		"start": "npx tsx ./src/index.ts",
+		"start": "node dist/index.js",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
