--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -16,7 +16,9 @@ env:
   IMAGE_NAME_API: ${{ github.repository }}-api
 
 jobs:
-  build-and-push-images:
+  # Split into two parallel jobs
+  build-and-push-web:
+    name: Build and Push Web Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -61,20 +63,6 @@ jobs:
             type=semver,pattern={{major}}
             type=sha
 
-      - name: Extract Docker metadata for API
-        id: meta-api
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_API }}
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-
       # Build and push Web Docker image
       - name: Build and push Web Docker image
         id: build-and-push-web
@@ -89,6 +77,52 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  build-and-push-api:
+    name: Build and Push API Image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # This is needed for requesting the JWT
+      id-token: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Setup QEMU for multi-architecture builds
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      # Setup Docker buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      # Login to GitHub Container Registry
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Extract metadata for Docker images
+      - name: Extract Docker metadata for API
+        id: meta-api
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_API }}
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
+
       # Build and push API Docker image
       - name: Build and push API Docker image
         id: build-and-push-api
@@ -102,3 +136,28 @@ jobs:
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  # Summary job that runs after both builds are complete
+  summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: [build-and-push-web, build-and-push-api]
+    if: always()
+
+    steps:
+      - name: Check build status
+        run: |
+          if [[ "${{ needs.build-and-push-web.result }}" != "success" || "${{ needs.build-and-push-api.result }}" != "success" ]]; then
+            echo "::error::One or more builds failed!"
+            echo "Web build status: ${{ needs.build-and-push-web.result }}"
+            echo "API build status: ${{ needs.build-and-push-api.result }}"
+            exit 1
+          else
+            echo "::notice::All builds completed successfully!"
+            echo "Web build status: ${{ needs.build-and-push-web.result }}"
+            echo "API build status: ${{ needs.build-and-push-api.result }}"
+
+            echo "Images are now available at:"
+            echo "- ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_WEB }}"
+            echo "- ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_API }}"
+          fi
