--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,35 +1,44 @@
 {
 	"name": "api",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"build": "tsc",
-		"clean": "rm -rf dist",
-		"dev": "npx tsx watch ./src/index.ts",
+		"dev": "tsx watch src/index.ts",
+		"build": "tsc --project tsconfig.json",
 		"start": "node dist/index.js",
+		"lint": "biome check .",
+		"format": "biome format . --write",
+		"typecheck": "tsc --noEmit",
+		"clean": "rm -rf dist",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
 		"test:ui": "vitest --ui"
 	},
 	"dependencies": {
+		"@repo/auth": "workspace:*",
+		"@repo/db": "workspace:*",
+		"@repo/logger": "workspace:*",
+		"better-auth": "^1.2.4",
 		"body-parser": "1.20.3",
 		"consola": "3.4.0",
-		"cors": "2.8.5",
-		"express": "4.21.2",
+		"cors": "^2.8.5",
+		"express": "^5.0.1",
 		"morgan": "1.10.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
 		"@repo/typescript-config": "workspace:*",
 		"@types/body-parser": "1.19.5",
-		"@types/cors": "2.8.17",
-		"@types/express": "4.17.21",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^5.0.0",
 		"@types/morgan": "1.9.9",
-		"@types/node": "22.13.10",
+		"@types/node": "^22.13.10",
 		"@types/supertest": "6.0.2",
 		"@vitest/coverage-v8": "3.0.8",
 		"@vitest/ui": "3.0.8",
 		"supertest": "7.0.0",
-		"typescript": "5.8.2"
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.2"
 	}
 }
