feat(web): enhance API integration and validation in page component
- Added validation for the required name field in the Web component.
- Updated API endpoint to use the correct path for fetching messages.
- Integrated custom logger for improved debugging in the API route.
- Adjusted TypeScript configuration for better readability and structure.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@repo/logger": "workspace:*",
 		"@repo/ui": "workspace:*",
 		"next": "15.2.2",
 		"react": "19.0.0",
