chore: update turbo.json to improve task structure and add format/typecheck tasks
- Reformatted task definitions for better readability.
- Added empty outputs for new format and typecheck tasks.
- Ensured consistent structure across all tasks in turbo.json.

--- a/turbo.json
+++ b/turbo.json
@@ -2,21 +2,43 @@
 	"$schema": "https://turbo.build/schema.json",
 	"tasks": {
 		"build": {
-			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": ["dist/**", ".next/**", "!.next/cache/**", "public/dist/**"],
-			"dependsOn": ["^build"],
-			"env": ["NEXT_PUBLIC_API_HOST"]
+			"inputs": [
+				"$TURBO_DEFAULT$",
+				".env*"
+			],
+			"outputs": [
+				"dist/**",
+				".next/**",
+				"!.next/cache/**",
+				"public/dist/**"
+			],
+			"dependsOn": [
+				"^build"
+			],
+			"env": [
+				"NEXT_PUBLIC_API_HOST"
+			]
 		},
 		"test": {
-			"outputs": ["coverage/**"],
+			"outputs": [
+				"coverage/**"
+			],
 			"dependsOn": []
 		},
 		"lint": {
-			"dependsOn": ["^build"]
+			"dependsOn": [
+				"^build"
+			]
 		},
 		"dev": {
 			"cache": false,
 			"persistent": true
+		},
+		"format": {
+			"outputs": []
+		},
+		"typecheck": {
+			"outputs": []
 		},
 		"clean": {
 			"cache": false
