--- a/kubernetes/overlays/production/network-policy.yaml
+++ b/kubernetes/overlays/production/network-policy.yaml
@@ -63,4 +63,32 @@ spec:
         - protocol: TCP
           port: 3001
   egress:
-    - {} # Allow all egress traffic from API pods
+    - to:
+        - podSelector:
+            matchLabels:
+              app: postgres
+      ports:
+        - protocol: TCP
+          port: 5432
+    - {} # Allow all other egress traffic from API pods
+---
+# Allow ingress traffic to PostgreSQL only from the API
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-traffic-to-postgres
+  namespace: monorepo-app
+spec:
+  podSelector:
+    matchLabels:
+      app: postgres
+  ingress:
+    - from:
+        - podSelector:
+            matchLabels:
+              app: api
+      ports:
+        - protocol: TCP
+          port: 5432
+  egress:
+    - {} # Allow all egress traffic from PostgreSQL pods
