feat(web): update package.json and tsconfig.json for improved type checking and module resolution
- Added a typecheck script to package.json for TypeScript compilation without emitting files.
- Introduced path mappings in tsconfig.json to simplify module imports for components and libraries.
- Updated dependencies to include better-auth and workspace links for auth and db packages.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,11 +5,15 @@
 	"scripts": {
 		"build": "next build",
 		"dev": "next dev",
-		"start": "next start"
+		"start": "next start",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@repo/auth": "workspace:*",
+		"@repo/db": "workspace:*",
 		"@repo/logger": "workspace:*",
 		"@repo/ui": "workspace:*",
+		"better-auth": "1.2.4",
 		"next": "15.2.2",
 		"react": "19.0.0",
 		"react-dom": "19.0.0"
