--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,32 @@ services:
     restart: always
     ports:
       - 3001:3001
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/monorepo
+    depends_on:
+      - db
     networks:
       - app_network
+  db:
+    container_name: db
+    image: postgres:16-alpine
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=monorepo
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app_network
+
+volumes:
+  postgres_data:
 
 # Define a network, which allows containers to communicate
 # with each other, by using their container name as a hostname
 networks:
   app_network:
-    external: true
+    driver: bridge
