--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,21 +1,4 @@
 {
-	"name": "@repo/db",
-	"version": "0.0.0",
-	"private": true,
-	"main": "./dist/index.js",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"scripts": {
-		"build": "tsup src/index.ts --format cjs,esm --dts",
-		"dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-		"lint": "biome check .",
-		"format": "biome format . --write",
-		"typecheck": "tsc --noEmit",
-		"db:generate": "prisma generate",
-		"db:push": "prisma db push --skip-generate",
-		"db:migrate": "better-auth migrate",
-		"clean": "rm -rf dist"
-	},
 	"dependencies": {
 		"@prisma/client": "6.5.0"
 	},
@@ -25,5 +8,22 @@
 		"prisma": "6.5.0",
 		"tsup": "8.4.0",
 		"typescript": "5.8.2"
-	}
+	},
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"name": "@repo/db",
+	"private": true,
+	"scripts": {
+		"build": "tsup src/index.ts --format cjs,esm --dts",
+		"clean": "rm -rf dist",
+		"db:generate": "prisma generate",
+		"db:migrate": "prisma migrate dev",
+		"db:push": "prisma db push --skip-generate",
+		"dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+		"format": "biome format . --write",
+		"lint": "biome check .",
+		"typecheck": "tsc --noEmit"
+	},
+	"types": "./dist/index.d.ts",
+	"version": "0.0.0"
 }
