feat(docker): add migration service to Docker Compose configuration
- Introduced a new migration service in docker-compose.yml for handling database migrations.
- Configured the migration service to depend on the database and utilize the Prisma CLI for deployment.
- Updated network settings to include the new migration service for improved container communication.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,19 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/monorepo
     depends_on:
       - db
+      - migration
+    networks:
+      - app_network
+  migration:
+    container_name: migration
+    image: ${GHCR_REGISTRY:-ghcr.io}/${GHCR_USERNAME:-username}/${GHCR_REPO:-monorepo-starter}-api:${GHCR_TAG:-latest}
+    command: npx prisma migrate deploy --schema=/app/packages/db/prisma/schema.prisma
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/monorepo
+    volumes:
+      - ./packages/db/prisma:/app/packages/db/prisma
+    depends_on:
+      - db
     networks:
       - app_network
   db:
