feat(kubernetes): update secrets management for API and PostgreSQL
- Refactored API deployment and database migration job to use Kubernetes Secrets for sensitive environment variables.
- Added new secrets files for API and PostgreSQL credentials.
- Updated kustomization files to include the new secrets.
- Enhanced production overlays with patches for secure secret management.

--- a/kubernetes/base/api-deployment.yaml
+++ b/kubernetes/base/api-deployment.yaml
@@ -41,9 +41,15 @@ spec: # The specification for the Deployment
             - name: NODE_ENV # Environment variable name
               value: "production" # Environment variable value
             - name: DATABASE_URL
-              value: "postgresql://postgres:postgres@postgres:5432/monorepo"
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secrets
+                  key: DATABASE_URL
             - name: BETTER_AUTH_SECRET
-              value: "super-secret-key-for-development-only"
+              valueFrom:
+                secretKeyRef:
+                  name: api-secrets
+                  key: BETTER_AUTH_SECRET
           livenessProbe: # Checks if the container is alive and running
             httpGet: # Performs an HTTP GET request to check health
               path: /api/health # The path to request for health check
