--- a/kubernetes/overlays/production/kustomization.yaml
+++ b/kubernetes/overlays/production/kustomization.yaml
@@ -32,6 +32,9 @@ patchesStrategicMerge:
   - configmap-patch.yaml
   - postgres-deployment-patch.yaml
   - postgres-pvc-patch.yaml
+  - postgres-secrets-patch.yaml
+  - postgres-configmap-patch.yaml
+  - api-secrets-patch.yaml
 
 # Add production-specific labels to all resources
 commonLabels:
